# tensor-algebra

./: CMakeLists.txt  Expression.cpp  Expression.h  Generator.cpp  Generator.h  Indices.cpp  Indices.h  LICENSE  Makefile  MonomialExpression.cpp  MonomialExpression.h  MyPermutation.h  NextCombination.h  NumericSimplify.cpp  README.md  Rational.cpp  Rational.h  Scalar.cpp  Scalar.h  ScalarSum.cpp  ScalarSum.h  Tensor.cpp  Tensor.h  TensorMonomial.h  main.cpp
include/: Expression.h  Generator.h  Indices.h  MonomialExpression.h  MyPermutation.h  NumericSimplify.h  Rational.h  Scalar.h  ScalarSum.h  Tensor.h  TensorMonomial.h
src/: 3plus1.cpp  3plus1_ab.cpp  3plus1_abc.cpp  3plus1_abcd.cpp  ApplyGaugeSymmetry.cpp  Expression.cpp  Generator.cpp  Indices.cpp  MonomialExpression.cpp  MyPermutation.cpp  NumericSimplify.cpp  Rational.cpp  Scalar.cpp  ScalarSum.cpp  Tensor.cpp  TensorMonomial.cpp  ansatz.cpp  area.cpp  area_2nd_ansatz.cpp  area_ansatz.cpp  area_ansatz_cyclic.cpp  area_cyclic.cpp  area_epsilon.cpp  area_gauge.cpp  area_gauge_cyclic.cpp  load_and_print.cpp  main.cpp  main2.cpp  main3.cpp  main4.cpp  mapping.cpp  metric.cpp
src/test/: CalculationsTest.cpp  ExpressionTest.cpp  IndicesTest.cpp  MonomialExpressionTest.cpp  RationalTest.cpp  ScalarSumTest.cpp  ScalarTest.cpp  TensorMonomialTest.cpp  TensorTest.cpp
